--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -25,7 +25,6 @@
     font-size: 16px;
     /* All the colors used on the site */
     background-image: url(../../assets/images/backgrounds/paper-textured-background.webp);
-    --background-body: #ffffff;
     --brown: #B36235;
     --beige: #D88D60;
     --backgroundcomponent: #FFBE98;
@@ -40,12 +39,6 @@
     --light-purple: #910A67;
 }
 
-//picture in the accordeon recipe
-.imgPreview{
-    max-width:15rem;
-    max-height:15rem;
-}
-
 // Titles
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
@@ -54,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-family: avatarock;
+    font-family: MegantВ-Personal-Use;
     font-weight: bold;
     font-size: 2rem;
     letter-spacing: 0.2em;
@@ -68,6 +61,15 @@ h2 {
     letter-spacing: 0.3rem;
     margin-top: 0.9rem;
     margin-bottom: 0.9rem;
+}
+
+h3 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    height: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 p {
@@ -108,112 +110,65 @@ img {
 
 /** ================ End Sections ================**/
 
-/** ================ Start Header ================**/
-
-.sticky{
-    position: sticky;
-    top: 0;
-    z-index: 2;
+/** ================ Start Buttons ================ **/
+.wrapper {
+    padding: 1.5rem 0;
+    filter: url('#goo');
 }
 
-header img {
-    padding-bottom: 0.2rem;
-    width: 4rem;
-    display: block;
-    margin: auto;
-}
-
-.burgersearch {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-}
-
-.connexion {
-    width: 2.2em;
-    padding-top: 1.2em;
-}
-
-input#search {
-    padding-top: 0;
-    margin-top: 0;
-}
-
-// search form
-#wrapsearch {
-    margin-right: 0.10rem;
-    margin-left: 3rem;
+.button {
     display: inline-block;
+    font-weight: bold;
+    line-height: 1;
+    border-radius: 0.7em;
     position: relative;
-    height: 3rem;
-    float: right;
-    padding: 0;
-}
-
- .search-input[type="text"] {
-    height: 4rem;
-    font-size: 1rem;
-     display: inline-block;
-     font-weight: 100;
-     border: noheader img;
-     outline: none;
-     color: var(--color-titre
-     );
-     padding-right: 2rem;
-     width: 0px;
-     position: absolute;
-     top: 0;
-     right: 0;
-     background: none;
-     z-index: 3;
-     transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-     cursor: pointer;
- }
-
-// search opening
- .search-input[type="text"]:focus {
-     width: 14rem;
-     z-index: 1;
-     cursor: text;
- }
-
-input[type="submit"] {
-    height: 2.5rem;
-    width: 2rem;
-    display: inline-block;
-    color: var(--color-titre);
-    float: right;
-    background: url(../../assets/images/logos/search.svg) center center no-repeat;
-    background-size: 1.6rem;
-    text-indent: -600rem;
+    min-width: 8.23em;
+    font-size: 1.25rem;
+    background-color: var(--brown);
+    color: var(--backgroundsection);
+    height: 2em;
     border: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 2;
-    cursor: pointer;
-    transition: opacity .4s ease;
+    cursor: pointer; 
 }
-/** ================ End Header ================ **/
+
+.button:before,
+.button:after {
+    width: 6.8rem;
+    height: 3rem;
+    position: absolute;
+    content: "";
+    // display: inline-block;
+    background: var(--color);
+    border-radius: 50%;
+    transition: transform 1s ease;
+    transform: scale(0);
+    z-index: -1;
+}
+
+.button:before {
+    top: -25%;
+    left: 20%;
+    background-color: var(--brown);
+}
+
+.button:after {
+    bottom: -25%;
+    right: 20%;
+    background-color: var(--brown);
+}
+
+.button:hover:before,
+.button:hover:after {
+    transform: none;
+}
+/** ================ End Buttons ================ **/
 
 /** ================  Start Recipes/Reviews ================**/
-.pagination {
-    margin: 1rem;
-    font-style: italic;
-    font-size : 1rem;
-    border: none;
-    background-color: var(--backgroundsection);
-}
-
 // cards
 .framerestaurants, .framerecipes {
     margin: 0.7rem;
     text-align: center;
     display: inline-block;
-    //border: 1px solid yellowgreen;
     padding-top: 1rem;
     width: 13rem;
 }
@@ -227,15 +182,6 @@ input[type="submit"] {
 
 .framerestaurants p, .framerecipes p {
     padding-top: 0.5rem;  
-}
-
-h3 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    height: 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .infoRecipe {
@@ -313,202 +259,10 @@ h3 {
 
 /** ================  End Recipes/Reviews ================**/
 
-/** ================ Start Recipes ================ **/
-.formrecipes  {
-    background-color: var(--brown);
-    border-radius: 0.8rem;
-    color: var(--background-body);
-    padding: 1rem 2rem;
-    margin: 1rem;
-    border: none;
-}
-// Filters
-.filter {
-    background-color: var(--red);
-    border-radius: 0.8rem;
-    color: var(--background-body);
-    margin: 0.5rem;
-    width: 6rem;
-    height: 6rem;
-    border: none;
-    padding: 0.5em;
-}
 
-.filter p {
-    padding-top: 0.5rem;
-}
-
-.categories {
-    width: 4em;
-    height: 4em;
-}
-
-
-// Filters
-/** ====Start Accordion Recipes ==== **/
-
-    // .accordion-item:target .answer {
-    //     max-height: 40rem;
-    // }
-
-    // .accordion-item:target .accordion-link {
-    //     display: none
-    // }
-
-    // .accordion-item:target .accordion-link {
-    //     display: block;
-    // }
-
-/** ==== End Accordion Recipes ==== **/
-/** ================ End Recipes ================ **/
-
-/** ================ Start About us ================ **/
-textarea {
-    margin-top: 1em;
-    min-height: 7em;
-    max-height: 10em;
-    min-width: 18em;
-    max-width: 25em;
-    border-radius: 1.2em;
-    border-style: none;
-    padding: 0.5em;
-}
-
-.aboutus p {
-    margin: 0.8em;
-    font-size: 1rem;
-    line-height: 1.2rem;
-}
-
-.aboutNews,
-.leftPage,
-.backgroundsection .left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.profilePicture {
-    object-fit: cover;
-}
-
-.presentation {
-    line-height: 1.5em;
-}
-
-/** ================ Start Buttons ================ **/
-.wrapper {
-    padding: 1.5rem 0;
-    filter: url('#goo');
-}
-
-.button {
-    display: inline-block;
-    text-align: center;
-    font-weight: bold;
-    line-height: 1;
-    border-radius: 0.7em;
-    position: relative;
-    min-width: 8.23em;
-    text-decoration: none;
-    font-size: 1.25rem;
-    background-color: var(--brown);
-    color: var(--backgroundsection);
-    height: 2em;
-    border: none;
-    cursor: pointer;
-}
-
-.button:before,
-.button:after {
-    width: 4.4em;
-    height: 2.95em;
-    position: absolute;
-    content: "";
-    display: inline-block;
-    background: var(--color);
-    border-radius: 50%;
-    transition: transform 1s ease;
-    transform: scale(0);
-    z-index: -1;
-}
-
-.button:before {
-    top: -25%;
-    left: 20%;
-    background-color: var(--brown);
-}
-
-.button:after {
-    bottom: -25%;
-    right: 20%;
-    background-color: var(--brown);
-}
-
-.button:hover:before,
-.button:hover:after {
-    transform: none;
-}
-
-/** ================ End Buttons ================ **/
-/** ================ End About us ================ **/
-
-/** ================ Start Logform ================ **/
-.buttonlogin {
-    width: 60%;
-    height: 2.5rem;
-    margin: 0.6rem auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: var(--dark-red);
-    font-size: 1em;
-    font-weight: bold;
-    margin-top: 1.2rem;
-    outline: none;
-    border: none;
-    border-radius: 1.2rem;
-    transition: .2s ease-in;
-    cursor: pointer;
-}
-/** ================ End Logform ================ **/
-
-/** ================ Start Footer ================ **/
-.logofooter {
-    width: 4rem;
-    margin-top: 0.5rem;
-    margin-left: 0.5rem;
-    object-fit: cover;
-}
-
-.linksfooter {
-    width: 18rem;
-    display: flex;
-    justify-content: space-around;
-    padding: 1rem 0rem 1rem 5rem;
-}
-
-.navfooter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.socialicons {
-    margin-left: 4rem;
-    margin-top: -4rem;
-    display: flex;
-}
-
-.socialicons img {
-    width: 2.4rem;
-    margin-left: 1rem;
-}
-/** ================ End Footer ================ **/
 
 /** ================ Start Responsive Mobile ================ **/
-@media screen and (max-width:768px) {
+@media (max-width:768px) {
     /**Start burger**/
     $items: 4;
     $transition-duration: 0.5s;
@@ -545,7 +299,7 @@ textarea {
             pointer-events: auto;
             transform: translate(2rem, 2rem);
 
-        // Restoring nav items from 'lines' in the menu icon
+            // Hiding the burger menu for a navbar
             .nav-item {
                 color: var(--color-titre);
                 letter-spacing: 0;
@@ -598,12 +352,6 @@ textarea {
         border-radius: 100%;
         transition: $transition-duration + 0.1;
 
-        // Shadow on Hover
-        &:hover {
-            box-shadow: 0 0 0 0.5rem rgba(0, 0, 0, 0.1),
-                inset 0 0 0 1.25rem rgba(0, 0, 0, 0.1);
-        }
-
         &:before, &:after {
             position: absolute;
             content: '';
@@ -633,7 +381,7 @@ textarea {
         transition: $transition-duration;
     }
 
-    // Showing nav items as lines, making up the hamburger menu icon
+    // Showing nav items as lines, and hiding the burger menu icon
     .nav-item {
         position: relative;
         display: inline-block;
@@ -687,7 +435,7 @@ textarea {
 }
 
 /** ================ Start Responsive Desktop ================ **/
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
     /** header **/
     header input {
         display: none;
@@ -782,7 +530,7 @@ textarea {
     transition: 0.7s ease;
     }
 
-    @media screen and (min-width: 1100px) {
+    @media (min-width: 1100px) {
 
         .menu-nav a {
         margin-left: 0.7em;
@@ -795,7 +543,7 @@ textarea {
         }
     }
 
-    @media screen and (min-width: 1400px) {
+    @media (min-width: 1400px) {
         .menu-nav a {
         margin-left: 1em;
         width: 9em;
